# GBP

./: .gitignore  Dockerfile  README.md  build.sh  debug_output.txt  main.py  pyproject.toml  render.yaml  test.py
assets/: pre-prompt.txt
src/: main.py  reviews.py  run.py
src/api/v1/routers/: analyzer.py  llm_analysis.py  reviews.py  site_socials.py  status.py
src/api/v1/schemas/: analyzer_schemas.py
src/core/: config.py
src/modules/: reviews.py
src/scrapers/: photo_scraper.py  uploader_scraper_process.py
src/services/: gbp_analyzer.py  job_status.py  llm_detailed_analysis.py  supabase.py
src/utils/: analyzer_helper.py  computation.py  parsing.py  scoring.py
