[project]
name = "reviews-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Wintoo12",email = "sencilmarkandrew12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-search-results (>=2.4.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
